[package]
name = "al-1s"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"

serde_json = "1"
chrono = "0.4.40"
utoipa = { version = "5", features = ["axum_extras", "chrono"]}
utoipa-scalar = { version = "0.3.0", features = ["axum"] } # Added axum feature
tower-http = { version = "0.6", features = ["fs"] }
tower = "0.5.2"
windows = { version = "0.61.1", features = ["Win32_System_Com", "Win32_System_Hypervisor", "Win32_Foundation"] }
wmi = "0.15.2"
