[package]
name = "al-1s"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"

serde_json = "1"
chrono = "0.4.40"
utoipa = { version = "5", features = ["axum_extras", "chrono"]}
utoipa-scalar = { version = "0.3.0", features = ["axum"] } # Added axum feature
tower-http = { version = "0.6", features = ["fs"] }
tower = "0.5.2"
windows = { version = "0.61.1", features = ["Win32_Security_Authentication_Identity", "Win32_System_Threading", "Win32_System_Com", "Win32_System_Wmi", "Win32_System_Ole", "Win32_Foundation", "Win32_System_Hypervisor"] }
once_cell = "1.19.0"
wmi = "0.12.0"
powershell_script = "1.0.0"
jsonwebtoken = "9.3.1"
rusqlite = {version = "0.34.0", features = ["bundled"] }
time = "0.3.41"
sha2 = "0.10.8"
