[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"

serde_json = "1"
chrono = "0.4.40"
utoipa = { version = "5", features = ["axum_extras", "chrono"]}
utoipa-scalar = { version = "0.3.0", features = ["axum"] } # Added axum feature
